--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "hatchling.build"
 
 [project]
 name = "zoteroapi"
-version = "0.1.0"
-description = "用于访问本地Zotero服务器API的Python客户端库"
+version = "0.1.1"
+description = "This is a Python client library for accessing the local Zotero server API."
 readme = "README.md"
-authors = [{ name = "Your Name", email = "your.email@example.com" }]
+authors = [{ name = "Tao Zhang" }]
 license = { file = "LICENSE" }
 classifiers = [
     "Programming Language :: Python :: 3",
